Deployment/user_management/key_deployment_service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  key-dep
  namespace: abed-roost
  labels:
    app:  key-dep
spec:
  selector:
    matchLabels:
      app: key-dep
  replicas: 1
  template:
    metadata:
      labels:
        app:  key-dep
    spec:
      containers:
      - name:  key-dep
        image:  jboss/keycloak:10.0.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        # command:
        # - "/opt/jboss/keycloak/bin/standalone.sh"
        # args:
        # - "-Djboss.socket.binding.port-offset=1000"
        # - "-Dkeycloak.profile.feature.upload_scripts=enabled"
        ports:
        - containerPort:  9080
          name: key-dep-tcl
        - containerPort:  9443
          name:  key-dep-ssl
        - containerPort:  10990
          name:  key-dep
        volumeMounts:
        - name: realm-config
          mountPath: /opt/jboss/keycloak/realm-config
      volumes:
        - name: realm-config
          persistentVolumeClaim:
            claimName: key-pvc
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: keycloack-service
  namespace: abed-roost
  labels:
    app: keycloack-service
spec:
  selector:
    app: key-dep
  type: LoadBalancer 
  ports:
    - protocol: TCP
      port: 9080
      targetPort: 9080
