Deployment/user_management/key_ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: key-ingress
  namespace: abed-roost
  annotations:
    cert-manager.io/cluster-issuer: designate-clusterissuer-prod
    #kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: 13.235.13.30.nip.io
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: keycloack-service
            port:
              number: 9080
